# WA2_Spectrogram

./: .gitignore  CMakeLists.txt  README.md
project/: main.cpp
project/include/: MMFile.h  WAVFile.h
project/src/: MMFile.cpp
tests/: MMFileTests.cpp
tests/test_files/: mmfile_test_file2
theory/: FurieTransform.odt
